--- a/.github/workflows_bak/update-change-history.yml
+++ b/.github/workflows_bak/update-change-history.yml
@@ -1,14 +1,10 @@
-name: Github合并更新历史信息到脚本README.md
+name: Github合并更新历史信息到脚本REAMDE.md
 
 on:
   push:
     paths:
       - 'Script details/**/Change history/README.md'  # 仅在指定路径的 README.md 文件发生变动时触发
   workflow_dispatch:  # 允许手动触发工作流
-
-concurrency:
-  group: update-qinwuyuan-UserScripts # 将所有运行中的实例放到同一个并发组中
-  cancel-in-progress: false  # 如果有正在执行的工作流，不取消，而是排队
 
 jobs:
   update-change-history:
