--- a/.github/workflows_bak/update-chinagodman-commit.yml
+++ b/.github/workflows_bak/update-chinagodman-commit.yml
@@ -1,17 +1,13 @@
-name: Github合并更新历史信息到脚本README.md
+name: 人民的勤务员更新脚本
 
 on:
   push:
     paths:
-      - 'Script details/**/Change history/README.md'  # 仅在指定路径的 README.md 文件发生变动时触发
+      - 'Script details/**/*.js'
   workflow_dispatch:  # 允许手动触发工作流
 
-concurrency:
-  group: update-qinwuyuan-UserScripts # 将所有运行中的实例放到同一个并发组中
-  cancel-in-progress: false  # 如果有正在执行的工作流，不取消，而是排队
-
 jobs:
-  update-change-history:
+  update-chinagodman-commit:
     runs-on: ubuntu-latest
     steps:
       - name: 检出代码
@@ -24,12 +20,6 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: 安装依赖
-        run: |
-          python -m pip install --upgrade pip
-          pip install markdown  # 安装 markdown 库
-          # 如果有其他依赖项，请在这里添加
-
       - name: 获取当前分支
         id: get_branch
         run: |
@@ -39,13 +29,19 @@ jobs:
       - name: 拉取最新更改
         run: |
           git pull origin ${{ env.branch }}  # 拉取最新的远程更改
-
-      - name: 运行合并脚本 并对没有帮助文档的说明增加一下
+ 
+      - name: 获取最新提交信息
+        id: get_commit_message
         run: |
-          python pythonscr/merge-change-history/main.py
-          python pythonscr/update-help/main.py
-        continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
+          # 获取最新提交的提交信息
+          commit_message=$(git log -1 --pretty=format:%s | sed 's/"/\\"/g')  # 转义双引号
+          echo "commit_message=$commit_message" >> $GITHUB_ENV
 
+      - name: 根目录脚本__更新py
+        run: |
+          # 复制 `Script details` 目录中的所有 .js 文件到根目录，强制覆盖
+           python pythonscr/copy_js_files.py
+        
       - name: 提交和推送更改
         run: |
           # 配置 Git 用户
@@ -54,7 +50,7 @@ jobs:
           
           # 添加更改
           git add .
-          git commit -m '合并更新历史' || echo "没有需要提交的更改"
+          git commit -m "${{ env.commit_message }}" || echo "没有需要提交的更改"
           git push origin ${{ env.branch }}  
         env:
           MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 传递 Token 到 Git 环境变量中
