--- a/.github/workflows_bak/update-icon.yml
+++ b/.github/workflows_bak/update-icon.yml
@@ -1,17 +1,13 @@
-name: Github合并更新历史信息到脚本README.md
+name: Github 更新小徽章
 
 on:
-  push:
-    paths:
-      - 'Script details/**/Change history/README.md'  # 仅在指定路径的 README.md 文件发生变动时触发
+#  schedule:
+#    - cron: '0 0 * * *'  # 每天午夜运行一次，也可以调整为其他频率
+
   workflow_dispatch:  # 允许手动触发工作流
 
-concurrency:
-  group: update-qinwuyuan-UserScripts # 将所有运行中的实例放到同一个并发组中
-  cancel-in-progress: false  # 如果有正在执行的工作流，不取消，而是排队
-
 jobs:
-  update-change-history:
+  update-icon:
     runs-on: ubuntu-latest
     steps:
       - name: 检出代码
@@ -24,11 +20,7 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: 安装依赖
-        run: |
-          python -m pip install --upgrade pip
-          pip install markdown  # 安装 markdown 库
-          # 如果有其他依赖项，请在这里添加
+
 
       - name: 获取当前分支
         id: get_branch
@@ -40,10 +32,11 @@ jobs:
         run: |
           git pull origin ${{ env.branch }}  # 拉取最新的远程更改
 
-      - name: 运行合并脚本 并对没有帮助文档的说明增加一下
+
+
+      - name: 运行更新
         run: |
-          python pythonscr/merge-change-history/main.py
-          python pythonscr/update-help/main.py
+          python pythonscr/更新小徽章/更新小徽章.py
         continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
 
       - name: 提交和推送更改
@@ -54,7 +47,7 @@ jobs:
           
           # 添加更改
           git add .
-          git commit -m '合并更新历史' || echo "没有需要提交的更改"
+          git commit -m '更新小徽章' || echo "没有需要提交的更改"
           git push origin ${{ env.branch }}  
         env:
           MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 传递 Token 到 Git 环境变量中
