--- a/.github/workflows/update-Script-version.yml
+++ b/.github/workflows/update-Script-version.yml
@@ -1,13 +1,9 @@
-name: GreasyFork 更新用户脚本版本
+name: update-Script-version
 
 on:
   schedule:
     - cron: '0 0 * * *'  # 每天的 UTC 时间 0 点，即中国时间的早上 8 点
   workflow_dispatch:  # 允许手动触发工作流
-
-concurrency:
-  group: update-qinwuyuan-UserScripts  # 将所有运行中的实例放到同一个并发组中
-  cancel-in-progress: false  # 如果有正在执行的工作流，不取消，而是排队
 
 jobs:
   update-versions:
