--- a/.github/workflows/update-change-history.yml
+++ b/.github/workflows/update-change-history.yml
@@ -42,6 +42,7 @@ jobs:
 
       - name: 运行合并脚本 并对没有帮助文档的说明增加一下
         run: |
+            python pythonscr/更新小徽章/更新小徽章.py
           python pythonscr/merge-change-history/main.py
           python pythonscr/update-help/main.py
         continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
