--- a/.github/workflows/update-translate-repo-md.yml
+++ b/.github/workflows/update-translate-repo-md.yml
@@ -1,21 +1,14 @@
-name: UpdateREADMEList
+name: translate-repo-md
 
 on:
   workflow_run:
-    workflows: 
-      - "update-Script-version"   #触发了自动更新.
-      - "merge-change-history"     #触发了合并历史记录,可能json文件被改变,
+    workflows: ["UpdateREADMEList"]  # 更新了仓库自述文件,触发翻译
     types:
-      - completed
-  workflow_dispatch:  # 允许手动触发工作流
-
-
-concurrency:
-  group: update-qinwuyuan-UserScripts-2  # 将所有运行中的实例放到同一个并发组中
-  cancel-in-progress: false  # 如果有正在执行的工作流，不取消，而是排队
-
+      - completed  # 在 A 流程完成后触发
+  workflow_dispatch:  # 添加手动触发
+  
 jobs:
-  update-script-list:
+  translate-readme:
     runs-on: ubuntu-latest
     steps:
       - name: 检出代码
@@ -28,9 +21,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: 安装依赖
         run: |
-          pip install requests
+          python -m pip install --upgrade pip
+          pip install googletrans==4.0.0-rc1  # 安装 Google Translate API 的 Python 包
 
       - name: 获取当前分支
         id: get_branch
@@ -43,19 +37,19 @@ jobs:
       - name: 读取 Load.txt 中的脚本名称
         id: read-script
         run: |
-          script_path="pythonscr/update-script-list/update-script-list.py"
+          script_name=$(cat pythonscr/翻译readme_slp/Load.txt)
+          script_path="pythonscr/翻译readme_slp/${script_name}"
           echo "script_path=${script_path}" >> $GITHUB_ENV
 
-      - name: 执行README.md更新.刷新greasyfork数据
+      - name: 读取并翻译 README
         run: |
-          python pythonscr/update-script-list/upadate-greasyfork.py
           python ${{ env.script_path }}
         continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
-
+      
       - name: 拉取最新更改
         run: |
           git pull origin ${{ env.branch }}  # 拉取最新的远程更改
-      
+
       - name: 提交和推送更改
         run: |
           # 配置 Git 用户
@@ -64,9 +58,7 @@ jobs:
           
           # 添加更改
           git add .
-          git commit -m '更新脚本列表' || echo "没有需要提交的更改"
+          git commit -m '自动谷歌翻译 README 文件' || echo "没有需要提交的更改"
           git push origin ${{ env.branch }}
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 传递 Token 到 Git 环境变量中
-      
-      
