--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'Script details/**/Change history/README.md'  # 增加了新历史说明
-      - 'docs/ScriptsPath.json'  # 也在 docs/ScriptsPath.json 文件发生变动时触发 修改了新说明.
+      #- 'docs/ScriptsPath.json'  # 也在 docs/ScriptsPath.json 文件发生变动时触发 修改了新说明.
   workflow_dispatch:  # 允许手动触发工作流
 
 concurrency:
