--- a/.github/workflows/update-icon.yml
+++ b/.github/workflows/update-icon.yml
@@ -47,7 +47,7 @@ jobs:
           
           # 添加更改
           git add .
-          git commit -m '更新小徽章' || echo "没有需要提交的更改"
+          git commit -m '刷新徽章→pythonscr/更新小徽章/NewImgIcon.md → Script details/**/*.md' || echo "没有需要提交的更改"
           git push origin ${{ env.branch }}  
         env:
           MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 传递 Token 到 Git 环境变量中
