--- a/.github/workflows/update-translate-script-md.yml
+++ b/.github/workflows/update-translate-script-md.yml
@@ -51,7 +51,7 @@ jobs:
           
           # 添加更改
           git add .
-          git commit -m '谷歌翻译脚本说明文档' || echo "没有需要提交的更改"
+          git commit -m 'GoogleTranslate→Script details/**/README_xx.md→Script details/**/README_xx.md' || echo "没有需要提交的更改"
           git push origin ${{ env.branch }}
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 传递 Token 到 Git 环境变量中
