--- a/.github/workflows/update-translate-repo-md.yml
+++ b/.github/workflows/update-translate-repo-md.yml
@@ -36,20 +36,11 @@ jobs:
         run: |
           git pull origin ${{ env.branch }}  # 拉取最新的远程更改
 
-      - name: 读取 Load.txt 中的脚本名称
-        id: read-script
-        run: |
-          script_name=$(cat pythonscr/翻译readme_slp/Load.txt)
-          script_path="pythonscr/翻译readme_slp/${script_name}"
-          echo "script_path=${script_path}" >> $GITHUB_ENV
-
       - name: 读取并翻译 README
         run: |
-          python ${{ env.script_path }}
+          python pythonscr/translate-force-chinese-to-lang/main.py
         continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
       
-
-
       - name: 提交和推送更改
         run: |
           # 配置 Git 用户
