--- a/.github/workflows/update-Script-version.yml
+++ b/.github/workflows/update-Script-version.yml
@@ -2,7 +2,7 @@ name: update-Script-version
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天的 UTC 时间 0 点，即中国时间的早上 8 点
+    - cron: '0 2 * * 2'  # 每周二的 UTC 时间 2 点，即北京时间的早上 10 点
   workflow_dispatch:  # 允许手动触发工作流
 
 jobs:
