--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -44,12 +44,18 @@ jobs:
       - name: 更新相关脚本
         run: |
           python pythonscr/update-about-script/main.py
-        
-      - name: 运行合并脚本 并对没有帮助文档的说明增加一下
+
+      - name: 更新小徽章
         run: |
           python pythonscr/update-shields/main.py
-          python pythonscr/merge-change-history/main.py
+     
+      - name: 更新帮助
+        run: |
           python pythonscr/update-help/main.py
+      
+      - name: 更新变更日志
+        run: |
+          python pythonscr/merge-change-history/main.py 
         continue-on-error: true  # 让这个步骤即使出错也不会终止整个工作流
 
       - name: 提交和推送更改
