--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -68,7 +68,7 @@ jobs:
           git add .
           git commit -m "集中修改脚本[*.md]文件" \
                       -m "合并日志→Script details/**/Change history/README.md → Script details/**/*.md" \
-                      -m "刷新徽章→pythonscr/更新小徽章/NewImgIcon.md → Script details/**/*.md" \
+                      -m "刷新徽章→pythonscr/update-shields/NewImgIcon.md → Script details/**/*.md" \
                       -m "刷新帮助→pythonscr/update-help/NewUserScriptslist.md → Script details/**/*.md" \
                       -m "作者推荐→docs/ScriptsPath.json[script.relatedscripts] → Script details/**/*.md" \
           || echo "没有需要提交的更改"
