--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -1,4 +1,4 @@
-name: merge-change-history
+name: merge-change1-history
 
 on:
     push:
@@ -18,6 +18,7 @@ jobs:
             - name: 检出代码
               uses: actions/checkout@v3
               with:
+                  fetch-depth: 0
                   token: ${{ secrets.MY_GITHUB_TOKEN }} # 使用你创建的 Token
 
             - name: 设置 Python 环境
