--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -21,7 +21,8 @@ jobs:
           git commit -am "Delete statshistory.png files" || echo "No changes to commit"
 
       - name: Push changes
+        run: |
+          git push origin main  # 
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-        run: |
-          git push origin main  # 根据需要修改为您的默认分支
+       # 根据需要修改为您的默认分支
