--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,6 +6,8 @@ jobs:
   check_sensitive_info:
     runs-on: ubuntu-latest
     env:
+      GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
+      GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email }}
       GIT_COMMITTER_NAME: qinwuyuan-sync-bot
       GIT_COMMITTER_EMAIL: qinwuyuan-sync-bot@users.noreply.github.com
 
