--- a/.github/workflows/update-translate-repo-md.yml
+++ b/.github/workflows/update-translate-repo-md.yml
@@ -47,6 +47,7 @@ jobs:
                   # 配置 Git 用户
                   git config --global user.name 'github-actions[bot]'
                   git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+                  git pull
 
                   # 添加更改
                   git add .
