--- a/.github/workflows/test-auto.yml
+++ b/.github/workflows/test-auto.yml
@@ -30,8 +30,8 @@ jobs:
           
       - name: Push changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[boqt]"
+          git config user.email "github-actions[bowt]@users.noreply.github.com"
           git add .
           git commit -m "Add random folder structure and update description in ScriptsPath.json"
           git push
