--- a/.github/workflows/update-chinagodman-commit.yml
+++ b/.github/workflows/update-chinagodman-commit.yml
@@ -17,7 +17,7 @@ jobs:
           GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
           GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email }}
           GIT_COMMITTER_NAME: qinwuyuan-sync-bot
-          GIT_COMMITTER_EMAIL: qinwuyuan-sync-bot@users.noreply.github.com
+          GIT_COMMITTER_EMAIL: "${{ secrets.GPG_PRIVATE_EMAIL }}"
 
         steps:
             - name: 检出代码
@@ -76,11 +76,11 @@ jobs:
 
                   # 添加更改
                   git pull
-                  gpg --batch --import <(echo "$GPG_PRIVATE_KEY")
+                  
+                  gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
 
-                  git config --global user.name 'qinwuyuan-sync-bot'
-                  git config --global user.email ${{ GPG_PRIVATE_EMAIL }}
-                  git config --global user.signingkey  ${{ GPG_PRIVATE_ID }}  # 配置 GPG 密钥
+                  
+                  git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"  # 配置 GPG 密钥
                   git add .
                   git commit  -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
                   git push origin ${{ env.branch }}
