--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -75,7 +75,7 @@ jobs:
 
                   # 添加更改
                   git add .
-                  git commit -m "集中修改脚本[*.md]文件" \
+                  git commit -S -m "集中修改脚本[*.md]文件" \
                               -m "合并日志→Script details/**/Change history/README.md → Script details/**/*.md" \
                               -m "刷新徽章→pythonscr/update-shields/SHIELDS.md → Script details/**/*.md" \
                               -m "刷新帮助→pythonscr/update-help/HELP.md → Script details/**/*.md" \
