--- a/.github/workflows/update-translate-repo-md.yml
+++ b/.github/workflows/update-translate-repo-md.yml
@@ -45,13 +45,16 @@ jobs:
             - name: 提交和推送更改
               run: |
                   # 配置 Git 用户
-                  git config --global user.name 'github-actions[bot]'
-                  git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+                  gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+                  git config --global user.name 'qinwuyuan-sync-bot'
+                  git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
+                  git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+
                   git pull
 
                   # 添加更改
                   git add .
-                  git commit -m "仓库[README.md]更新" \
+                  git commit -S -m "仓库[README.md]更新" \
                               -m "GoogleTranslate→[docs/README.md]↓" \
                               -m "[docs/README_xx.md {vi,ko,en,jp,zh-TW}]" \
                   || echo "没有需要提交的更改"
