--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -1,4 +1,4 @@
-name: Update Contributors List
+name: update-contributors-list
 
 on:
   push:
@@ -47,13 +47,14 @@ jobs:
           git config --global user.name 'qinwuyuan-sync-bot'
           git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+          git pull
 
           # 确保所有提交都使用GPG签名
           git config --global commit.gpgSign true
 
           # 添加文件并提交
           git add docs/README.md
-          git commit -S -m "docs: update contributors list in docs/README.md"
+          git commit -S -m "update contributors→[docs/README.md]"
 
           # 推送更改
           git push
